--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/yguionnet/nodejs-helloworld.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/yguionnet/nodejs-helloworld#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "ronin-mocks": "^0.1.6",
+    "ronin-server": "^0.1.3"
   }
 }
